--- a/app/views/profesia/index.html.erb
+++ b/app/views/profesia/index.html.erb
@@ -1,14 +1,3 @@
-<center>
-  <nav class="navbar navbar-default" role="navigation">
-    <strong><%= link_to 'Index', root_path %></strong>
-    <strong><%= link_to 'Vzdelavaci Obsah', obsahs_path %></strong>
-    <strong><%= link_to 'Studijne odbory', odbors_path %></strong>
-    <strong><%= link_to 'Profesijne odbory', profesia_path %></strong>
-    <right><strong><%= link_to 'Login/Log Out', root_path %></strong></right>
-    <right><strong><%= link_to 'Registracia', root_path %></strong></right>
-  </nav>
-</center>
-
 <%= link_to 'New Profesium', new_profesium_path %>
 
 <table class="table table-bordered">
@@ -24,11 +13,11 @@
   <% @profesia.each do |profes| %>
       <tr>
         <td><%= profes.profesia_cislo %></td>
-        <td><%= profes.nazov_profesia %></td>
-        <td>
-          <button type="submit" class="btn btn-info btn-block"><%= link_to 'Show', profes %></button>
-          <button type="submit" class="btn btn-default btn-block"><%= link_to 'Edit', edit_profesium_path(profes) %></button>
-          <button type="submit" class="btn btn-warning btn-block"><%= link_to 'Destroy', profes, method: :delete, data: { confirm: 'Are you sure?' } %></button>
+        <td><%= profes.nazov_profesie %></td>
+        <td width="20%">
+          <button type="submit" class="btn btn-info "><%= link_to 'Show', profes %></button>
+          <button type="submit" class="btn btn-default "><%= link_to 'Edit', edit_profesium_path(profes) %></button>
+          <button type="submit" class="btn btn-warning "><%= link_to 'Destroy', profes, method: :delete, data: { confirm: 'Are you sure?' } %></button>
         </td>
       </tr>
   <% end %>
